--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "radash": "^11.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.1"
+    "react-router-dom": "^6.11.1",
+    "stream-chat": "^8.13.1",
+    "stream-chat-react": "^10.14.1",
+    "talkjs": "^0.16.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
